--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Green App</title>
+    <title>App</title>
     <style>
         body {
             background-color: blue;
@@ -13,6 +13,6 @@
     </style>
 </head>
 <body>
-    <h1>Application is running on Port 80</h1>
+    <h1>Welcome to Nagasai App</h1>
 </body>
 </html>
