--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>App</title>
     <style>
         body {
-            background-color: green;
+            background-color: blue;
             color: white;
             font-family: Arial, sans-serif;
             text-align: center;
